tests/baselines/reference/parser.asyncGenerators.functionDeclarations.es2017.errors.txt
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitInParameterInitializerIsError.ts(1,25): error TS2524: 'await' expressions cannot be used in a parameter initializer.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitMissingValueIsError.ts(2,10): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitParameterIsError.ts(1,21): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitParameterIsError.ts(1,26): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.ts(2,14): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.ts(2,20): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.ts(2,22): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.ts(2,14): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.ts(2,22): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.ts(2,24): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.ts(2,32): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.ts(2,24): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.ts(2,32): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldInParameterInitializerIsError.ts(1,25): error TS2523: 'yield' expressions cannot be used in a parameter initializer.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldParameterIsError.ts(1,21): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldParameterIsError.ts(1,26): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldStarMissingValueIsError.ts(2,12): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/functionDeclarationIsOk.ts (0 errors) ====
    async function * f1() {
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitNameIsOk.ts (0 errors) ====
    async function * await() {
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldNameIsOk.ts (0 errors) ====
    async function * yield() {
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitParameterIsError.ts (2 errors) ====
    async function * f4(await) {
                        ~~~~~
!!! error TS1138: Parameter declaration expected.
                             ~
!!! error TS1005: ';' expected.
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldParameterIsError.ts (2 errors) ====
    async function * f5(yield) {
                        ~~~~~
!!! error TS1138: Parameter declaration expected.
                             ~
!!! error TS1005: ';' expected.
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitInParameterInitializerIsError.ts (1 errors) ====
    async function * f6(a = await 1) {
                            ~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldInParameterInitializerIsError.ts (1 errors) ====
    async function * f7(a = yield) {
                            ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedAsyncGeneratorIsOk.ts (0 errors) ====
    async function * f8() {
        async function * g() {
        }
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.ts (2 errors) ====
    async function * f9() {
        function yield() {
                 ~~~~~
!!! error TS1003: Identifier expected.
                         ~
!!! error TS1005: '=>' expected.
        }
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.ts (2 errors) ====
    async function * f10() {
        const x = function yield() {
                           ~~~~~
!!! error TS1005: '(' expected.
                                   ~
!!! error TS1005: '=>' expected.
        };
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.ts (3 errors) ====
    async function * f11() {
        function await() {
                 ~~~~~
!!! error TS1003: Identifier expected.
                       ~
!!! error TS1109: Expression expected.
                         ~
!!! error TS1005: ';' expected.
        }
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.ts (2 errors) ====
    async function * f12() {
        const x = function yield() {
                           ~~~~~
!!! error TS1005: '(' expected.
                                   ~
!!! error TS1005: '=>' expected.
        };
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldIsOk.ts (0 errors) ====
    async function * f13() {
        yield;
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldWithValueIsOk.ts (0 errors) ====
    async function * f14() {
        yield 1;
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldStarMissingValueIsError.ts (1 errors) ====
    async function * f15() {
        yield *;
               ~
!!! error TS1109: Expression expected.
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldStarWithValueIsOk.ts (0 errors) ====
    async function * f16() {
        yield * [];
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitWithValueIsOk.ts (0 errors) ====
    async function * f17() {
        await 1;
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitMissingValueIsError.ts (1 errors) ====
    async function * f18() {
        await;
             ~
!!! error TS1109: Expression expected.
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/awaitAsTypeIsOk.ts (0 errors) ====
    interface await {}
    async function * f19() {
        let x: await;
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldAsTypeIsOk.ts (0 errors) ====
    interface yield {}
    async function * f20() {
        let x: yield;
    }
==== tests/cases/conformance/parser/ecmascript2017/asyncGenerators/yieldInNestedComputedPropertyIsOk.ts (0 errors) ====
    async function * f21() {
        const x = { [yield]: 1 };
    }